Page MenuHome GnuPG

gpgme_op_encrypt_sign fails with GPG_ERR_INV_VALUE when doing symmetric encryption
Closed, ResolvedPublic

Description

When performing signed, symmetric encryption in GPGME via gpgme_op_encrypt_sign
the operation fails with GPG_ERR_INV_VALUE, as it expects there to be recipients
present.

gpgme_op_encrypt works as expected, as it accounts for the possibility of no
recipients being passed.

The attached patch changes gpgme_op_encrypt_sign to mimic the behavior of
gpgme_op_encrypt in relation to dealing with a NULL or empty recipient(s).

Details

Due Date
Sep 30 2012, 2:00 AM
Version
1.3.2

Event Timeline

werner set Due Date to Sep 30 2012, 2:00 AM.Sep 17 2012, 3:02 PM

Thanks for the patch. I slighly modified it and pushed it to master. Will go
into 1.4.2.

werner claimed this task.